# hugging-face-dataset-validator-rust

./: .gitignore  API_DOCUMENTATION.md  CARGO2HF_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_DATASET_SUMMARY.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  PROJECT_ORGANIZATION.md  PROJECT_SUMMARY.md  RAGIT_ANALYSIS_SUCCESS.md  README.md  RUST_ANALYZER_HF_DATASET_STATUS.md  RUST_COMPILER_ANALYSIS_SUCCESS.md  ULTIMATE_SUCCESS_SUMMARY.md  USAGE_GUIDE.md  convert_to_parquet.py  rust-analyzer-hf-integration-plan.md  rust-analyzer-hf-integration-summary.md  test_rust_to_ir.rs
src/: cargo2hf_extractor.rs  data_converter.rs  dataset_loader_example.rs  hf_dataset_converter.rs  llvm_ir_extractor.rs  main.rs  parquet_validator.rs  rust_analyzer_extractor.rs  solfunmeme_validator.rs  validator.rs
